css fix + readme

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- bootstrap css -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <!-- css -->
-    <link type="text/css" rel='stylesheet' href='/css/local_weather.css'>
+    <link type="text/css" rel='stylesheet' href='css/local_weather.css'>
     <!-- weather icons -->
     <link rel='stylesheet' href='/css/weather-icons.css'>
     <!-- weather icons min -->
